# sparse-coding

./: .coverage  .gitignore  CHATGPT_CRITICAL_FIXES_INTEGRATION_REPORT.md  CITATION.cff  ENHANCED_KKT_IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE-COMMERCIAL.md  MANIFEST.in  README.md  RESEARCH_ACCURACY_FIXES_SUMMARY.md  SHAPE_CONVENTION_AUDIT_REPORT.md  demo_sae_integration.py  enhanced_kkt_diagnostics.py  kkt_validation_demo.py  mkdocs.yml  pyproject.toml  test.csv  test2.csv  test_kkt_implementation.py  test_metrics.csv  test_paper_exact_validation.py  test_research_accuracy_fixes.py  test_whitening_filter_mathematical_fix.py
.github/workflows/: ci.yml  release.yml
benchmarks/: performance_comparison.py  simple_benchmark.py
docs/: api_clarity_improvements.md  changelog.md  contributing.md  index.md
docs/api/: algorithms.md  sparse-coder.md  utilities.md
docs/getting-started/: examples.md  installation.md  quick-start.md
docs/research/: benchmarks.md  comparison.md  foundations.md
docs/user-guide/: dictionary-learning.md  performance.md  sparse-coding.md
examples/: advanced_optimization_comparison.py  basic_dictionary_learning.py  complete_pipeline_demo.py  enhanced_features_demo.py  pipeline_demo.py  production_ready_demo.py  solver_comparison_benchmark.py  sparse_coder_modes_demo.py
sparse_coding/: __init__.py  advanced_optimization.py  cli.py  config.py  dashboard.py  deterministic.py  dictionary_learner.py  dictionary_learning_systems.py  dictionary_update_algorithms.py  fista_batch.py  fista_numba.py  jsonlog.py  learners.py  modular_algorithm_implementations.py  penalties.py  reference_implementations.py  sklearn_estimator.py  solvers.py  sparse_coder.py  sparse_coding_configuration.py  sparse_coding_visualization.py  stream.py  streaming_sparse_coding.py  validate_modular.py  whitening.py  xp.py
sparse_coding/adapters/: __init__.py  jax.py  sklearn.py  torch.py
sparse_coding/algorithms/: __init__.py  dictionary_update_algorithms.py  penalties.py  solvers.py
sparse_coding/api/: __init__.py  config.py  registry.py
sparse_coding/components/: __init__.py  penalties.py  register_defaults.py
sparse_coding/core/: __init__.py  array.py  dict_updater_implementations.py  interfaces.py  learner_implementations.py  penalties.py  penalty_implementations.py  solver_implementations.py  solvers.py  unified_config_system.py
sparse_coding/examples/: __init__.py  algorithm_validation_demo.py
sparse_coding/factories/: __init__.py  algorithm_factory.py
sparse_coding/learners/: configurable.py
sparse_coding/sae/: __init__.py  feature_interface.py  interpretability.py  torch_sae.py
sparse_coding/sc_modules/: __init__.py  core_algorithm.py  data_processing.py  dictionary_update.py  olshausen_field.py  optimization.py  utilities.py  validation.py  visualization.py
sparse_coding/serialization/: __init__.py  export.py  model_card.py  persistence.py
sparse_coding/sparse_autoencoders/: __init__.py  analysis.py  detection.py  feature_interface.py  visualization.py
sparse_coding/streaming/: __init__.py  online_learner.py
src/sparse_coding/: __init__.py  array_backend.py  batch_processor.py  cli.py  config.py  core.py  core_refactored.py  dictionary_learner.py  dictionary_learning_systems.py  dictionary_update_algorithms.py  example_visualization_usage.py  experimental_logging.py  fista_batch.py  fista_cupy.py  fista_numba.py  modular_algorithm_implementations.py  proximal_gradient_optimization.py  reproducible_sparse_coding.py  sklearn_estimator.py  solvers.py  sparse_coder.py  sparse_coding_configuration.py  sparse_coding_monitoring.py  sparse_coding_visualization.py  streaming_sparse_coding.py  utils.py  utils_refactored.py  viz.py  whitening.py
test/: events.out.tfevents.1757504337.Titan2116.local.68110.1  events.out.tfevents.1757504434.Titan2116.local.70842.1  events.out.tfevents.1757505067.Titan2116.local.83996.1
tests/: __init__.py  conftest.py  test_numerical_stability.py  test_penalty_mathematical_properties.py  test_research_mathematical_accuracy.py
tests/integration/: __init__.py  test_complete_pipeline.py  test_pipeline.py  test_readme_examples.py
tests/property_based/: __init__.py  test_mathematical_invariants.py
tests/research_validation/: __init__.py  test_algorithm_research_accuracy.py  test_fista_convergence_validation.py  test_fista_mathematical_correctness.py  test_ncg_solver_validation.py  test_numerical_stability_edge_cases.py  test_olshausen_field_compliance.py  test_olshausen_field_mathematical_correctness.py  test_sparsity_statistical_validation.py
tests/unit/: __init__.py  test_backend_adapter.py  test_core_critical_path.py  test_data_preprocessing_whitening.py  test_enhanced_features.py  test_gradient_validation.py  test_onnx_soft_thresholding.py  test_penalty_interface.py  test_registry_fixes.py  (+4 more)
(+64 files in other folders)
