[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-coding"
version = "2.0.0"
description = "Sparse coding that is paper-faithful and production-friendly (CLI + sklearn estimator + streaming encode)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Team" }]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "pillow>=9.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

urls = { "Homepage" = "https://example.com/sparse-coding" }

[project.scripts]
sparse-coding = "sparse_coding.cli:main"

[project.optional-dependencies]
gpu = ["cupy-cuda11x"]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.setuptools]
packages = { find = { where = ["."] } }
include-package-data = false
